import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow'
}

dependencies {
    // Gson for JSON parsing
    implementation 'com.google.code.gson:gson:2.13.1'

    // Guava for EventBus
    implementation 'com.google.guava:guava:33.0.0-jre'

    // Logging
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.3'
    // Reflections
    implementation 'org.reflections:reflections:0.9.12'

    // Utils
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // Look and Feel
    implementation 'com.formdev:flatlaf:3.5.2'

    // SQLite driver
    implementation 'org.xerial:sqlite-jdbc:3.51.0.0'

    // JDBI 3
    implementation 'org.jdbi:jdbi3-core:3.51.0'
    implementation 'org.jdbi:jdbi3-sqlobject:3.51.0'
    implementation 'org.jdbi:jdbi3-jackson2:3.51.0'

    implementation 'org.zeromq:jeromq:0.6.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'

    // YAML
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.0'

    // Embedded web service
    implementation 'io.javalin:javalin:7.0.1'

    def openapiVersion = '7.0.1'
    implementation "io.javalin.community.openapi:javalin-openapi-plugin:${openapiVersion}"
    implementation "io.javalin.community.openapi:javalin-swagger-plugin:${openapiVersion}"
    annotationProcessor "io.javalin.community.openapi:openapi-annotation-processor:${openapiVersion}"

    // MariaDB
    implementation 'com.mysql:mysql-connector-j:9.3.0'

    // Connection pooling
    implementation 'com.zaxxer:HikariCP:6.2.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-parameters'
}

// ────────────────────────────────────────────────
// ShadowJar configuration — disable default
// ────────────────────────────────────────────────

shadowJar {
    enabled = false
}

// ────────────────────────────────────────────────
// Three custom fat JAR tasks (one per main class)
// ────────────────────────────────────────────────

tasks.register('shadowIngest', ShadowJar) {
    group = 'shadow'
    description = 'Fat JAR → Ingest endpoint (self-hosted EDDN listener)'

    archiveFileName = 'elite-vault-ingest.jar'
    manifest {
        attributes 'Main-Class': 'elite.vault.Ingest'
        attributes 'Multi-Release': 'true'
    }

    mergeServiceFiles()
    mergeServiceFiles('META-INF/services/*')
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'

    // Safe lazy resolution to avoid ArrayList.get() timing issues
    configurations = project.configurations.named('runtimeClasspath').map { [it] }.get()

    from sourceSets.main.output

    dependencies {
        include(dependency { true })
    }

    destinationDirectory = file("${rootProject.projectDir}/distribution")
}

tasks.register('shadowApi', ShadowJar) {
    group = 'shadow'
    description = 'Fat JAR → API endpoint (self-hosted query server)'

    archiveFileName = 'elite-vault-api.jar'
    manifest {
        attributes 'Main-Class': 'elite.vault.api.RunApi'
        attributes 'Multi-Release': 'true'
    }

    mergeServiceFiles()
    mergeServiceFiles('META-INF/services/*')
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'

    configurations = project.configurations.named('runtimeClasspath').map { [it] }.get()

    from sourceSets.main.output

    dependencies {
        include(dependency { true })
    }

    destinationDirectory = file("${rootProject.projectDir}/distribution")
}

tasks.register('shadowBootstrap', ShadowJar) {
    group = 'shadow'
    description = 'Fat JAR → Initial DB import / schema setup'

    archiveFileName = 'elite-vault-bootstrap.jar'
    manifest {
        attributes 'Main-Class': 'elite.vault.bootstrap.InitialImport'
        attributes 'Multi-Release': 'true'
    }

    mergeServiceFiles()
    mergeServiceFiles('META-INF/services/*')
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'

    configurations = project.configurations.named('runtimeClasspath').map { [it] }.get()

    from sourceSets.main.output

    dependencies {
        include(dependency { true })
    }

    destinationDirectory = file("${rootProject.projectDir}/distribution")
}

// Make standard build/assemble produce the fat JARs
tasks.named('build') {
    dependsOn shadowIngest, shadowApi, shadowBootstrap
}

tasks.named('assemble') {
    dependsOn shadowIngest, shadowApi, shadowBootstrap
}

tasks.named('jar') {
    enabled = false
}